--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ body {
 }
 
 header {
-    background-image: url("Background.jpg");
     height: 1000px;
+    background: url("Background.jpg") no-repeat;
+    background-size: cover; 
 }
 
 .navbar {
@@ -173,28 +174,24 @@ p {
     height: 450px;
     width: 480px;
     margin: 0 10px 20px 10px;
-    background-color: blue;
 }
 
 .img1 {
     height: 450px;
     width: 690px;
     margin: 0 10px 20px 10px;
-    background-color: rosybrown;
 }
 
 .img2 {
     height: 450px;
     width: 690px;
     margin: 0 10px 10px 10px;
-    background-color: royalblue;
 }
 
 .img3 {
     height: 450px;
     width: 480px;
     margin: 0 10px 10px 10px;
-    background-color: red;
 }
 
 .ourWorkbtn {
@@ -202,7 +199,11 @@ p {
     height: 60px;
     width: 270px;
     border: 0px;
-    background-color: seagreen;
+    text-align: center;
+    font-size: 26px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #533738;
+    background-color: #efe6e4;
 }
 
 .team {
@@ -224,7 +225,7 @@ p {
     display: grid;
     justify-items: center;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-columns: minmax(10px, auto);
 }
 
 .imgTeam {
@@ -309,6 +310,7 @@ p {
     border-radius: 50%;
     grid-column: 1;
     grid-row: 1 / span 3;
+    line-height: 42px;
     text-align: center;
     align-self: center;
     justify-self:flex-end;
@@ -321,11 +323,16 @@ p {
     margin: 0 10px; 
     border-radius: 50%;
     grid-column: 4;
+    line-height: 42px;
     text-align: center;
     align-self: center;
     justify-self: flex-start;
     grid-row: 1 / span 3;
     background-color: #CC8B86;
+}
+
+.btn {
+    color: white;
 }
 
 .textReviewsBlock {
@@ -452,5 +459,13 @@ footer {
 
 .footerText {
     font-size: 18px;
+    margin-top: 10px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+
+#map {
+    height: 580px;
+    /* The height is 400 pixels */
+    width: 600px;
+    /* The width is the width of the web page */
+  }
